--- a/DataType/DataType.ipynb
+++ b/DataType/DataType.ipynb
@@ -1,1 +1,325 @@
-{"cells":[{"cell_type":"markdown","execution_count":null,"metadata":{},"outputs":[],"source":"## VS Code中测试Jupyter Notebook"},{"cell_type":"code","execution_count":9,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"8\n"}],"source":"a = 3\nb = 5\nprint(a + b)"},{"cell_type":"code","execution_count":10,"metadata":{},"outputs":[{"data":{"text/plain":"int"},"execution_count":10,"metadata":{},"output_type":"execute_result"}],"source":"type(10)\n"},{"cell_type":"code","execution_count":11,"metadata":{},"outputs":[{"data":{"text/plain":"float"},"execution_count":11,"metadata":{},"output_type":"execute_result"}],"source":"type(10.0)\n"},{"cell_type":"code","execution_count":12,"metadata":{},"outputs":[{"data":{"text/plain":"str"},"execution_count":12,"metadata":{},"output_type":"execute_result"}],"source":"type(\"Hello\")"},{"cell_type":"code","execution_count":13,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"34.3344\n"}],"source":"x = 10\ny =  3.43344\nprint(x*y)"},{"cell_type":"code","execution_count":14,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"[1, 2, 3, 4, 5]\n5\n1 5\n1 12\n[1, 2]\n[2, 3, 4, 12]\n[1, 2, 3]\n[1, 2, 3, 4]\n[1, 2, 3]\n"}],"source":"a = [1, 2, 3, 4, 5]\nprint(a)\nprint(len(a))\nprint(a[0], a[4])\na[4] = 12\nprint(a[0], a[4])\nprint(a[0:2])\nprint(a[1:])\nprint(a[:3])\nprint(a[:-1])\nprint(a[:-2])"},{"cell_type":"markdown","execution_count":1,"metadata":{},"outputs":[],"source":"### 字典"},{"cell_type":"code","execution_count":15,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"{'height': 180}\n{'height': 180, 'weight': 70}\n"}],"source":"me = {'height':180}\nme['height']\nprint(me)\nme['weight'] = 70\nprint(me)"},{"cell_type":"markdown","execution_count":2,"metadata":{},"outputs":[],"source":"### 布尔型"},{"cell_type":"code","execution_count":16,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"<class 'bool'>\n<class 'bool'>\nFalse\nTrue\n"}],"source":"hungry = True\nsleepy = False\nprint(type(hungry))\nprint(type(not sleepy))\nprint(hungry and sleepy)\nprint(hungry or sleepy)"},{"cell_type":"markdown","execution_count":null,"metadata":{},"outputs":[],"source":"### If语句"},{"cell_type":"code","execution_count":17,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"I'm hungry\nI'm not hungry\nI'm sleepy\n"}],"source":"hungry = True\nif hungry:\n    print(\"I'm hungry\")\n\nhungry = False\nif hungry:\n    print(\"I'm hungry\")\nelse:\n    print(\"I'm not hungry\")\n    print(\"I'm sleepy\")\n    \n\n"},{"cell_type":"markdown","execution_count":null,"metadata":{},"outputs":[],"source":"### for语句"},{"cell_type":"code","execution_count":18,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"1\n2\n3\n"}],"source":"for i in [1, 2, 3]:\n    print(i)"},{"cell_type":"markdown","execution_count":null,"metadata":{},"outputs":[],"source":"### 函数"},{"cell_type":"code","execution_count":19,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"Hello World\n"}],"source":"def hello():\n    print(\"Hello World\")\nhello()"},{"cell_type":"code","execution_count":20,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":"Hello cat!\n"}],"source":"def hello(object):\n    print(\"Hello \" + object + \"!\")\nhello(\"cat\")"},{"cell_type":"code","execution_count":null,"metadata":{},"outputs":[],"source":""}],"nbformat":4,"nbformat_minor":2,"metadata":{"language_info":{"name":"python","codemirror_mode":{"name":"ipython","version":3}},"orig_nbformat":2,"file_extension":".py","mimetype":"text/x-python","name":"python","npconvert_exporter":"python","pygments_lexer":"ipython3","version":3}}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## VS Code中测试Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 5\n",
+    "print(a + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(10.0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34.3344\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y =  3.43344\n",
+    "print(x*y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n5\n1 5\n1 12\n[1, 2]\n[2, 3, 4, 12]\n[1, 2, 3]\n[1, 2, 3, 4]\n[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5]\n",
+    "print(a)\n",
+    "print(len(a))\n",
+    "print(a[0], a[4])\n",
+    "a[4] = 12\n",
+    "print(a[0], a[4])\n",
+    "print(a[0:2])\n",
+    "print(a[1:])\n",
+    "print(a[:3])\n",
+    "print(a[:-1])\n",
+    "print(a[:-2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'height': 180}\n{'height': 180, 'weight': 70}\n"
+     ]
+    }
+   ],
+   "source": [
+    "me = {'height':180}\n",
+    "me['height']\n",
+    "print(me)\n",
+    "me['weight'] = 70\n",
+    "print(me)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 布尔型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n<class 'bool'>\nFalse\nTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "hungry = True\n",
+    "sleepy = False\n",
+    "print(type(hungry))\n",
+    "print(type(not sleepy))\n",
+    "print(hungry and sleepy)\n",
+    "print(hungry or sleepy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If语句"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm hungry\nI'm not hungry\nI'm sleepy\n"
+     ]
+    }
+   ],
+   "source": [
+    "hungry = True\n",
+    "if hungry:\n",
+    "    print(\"I'm hungry\")\n",
+    "\n",
+    "hungry = False\n",
+    "if hungry:\n",
+    "    print(\"I'm hungry\")\n",
+    "else:\n",
+    "    print(\"I'm not hungry\")\n",
+    "    print(\"I'm sleepy\")\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### for语句"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n2\n3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [1, 2, 3]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello():\n",
+    "    print(\"Hello World\")\n",
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello cat!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello(object):\n",
+    "    print(\"Hello \" + object + \"!\")\n",
+    "hello(\"cat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   }
+  },
+  "orig_nbformat": 2.0,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3.0
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
