--- a/DataType/DataType.ipynb
+++ b/DataType/DataType.ipynb
@@ -8,6 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 变量\n",
+    "#### 整型\n",
+    "#### 浮点数\n",
+    "\n",
+    "#### 元组\n",
+    "(a,b,c,...)\n",
+    "#### 列表\n",
+    "[a, b, c,...]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -107,20 +121,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuple_a = (1,2,3)\n",
+    "print(tuple_a)\n",
+    "print(type(tuple_a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n5\n1 5\n1 12\n[1, 2]\n[2, 3, 4, 12]\n[1, 2, 3]\n[1, 2, 3, 4]\n[1, 2, 3]\n"
+      "[1, 2, 3, 4, 5]\n",
+      "<class 'list'>\n",
+      "5\n",
+      "1 5\n",
+      "1 12\n",
+      "[1, 2]\n",
+      "[2, 3, 4, 12]\n",
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3]\n"
      ]
     }
    ],
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "print(a)\n",
+    "print(type(a))\n",
     "print(len(a))\n",
     "print(a[0], a[4])\n",
     "a[4] = 12\n",
@@ -148,7 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'height': 180}\n{'height': 180, 'weight': 70}\n"
+      "{'height': 180}\n",
+      "{'height': 180, 'weight': 70}\n"
      ]
     }
    ],
@@ -176,7 +212,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'bool'>\n<class 'bool'>\nFalse\nTrue\n"
+      "<class 'bool'>\n",
+      "<class 'bool'>\n",
+      "False\n",
+      "True\n"
      ]
     }
    ],
@@ -205,7 +244,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm hungry\nI'm not hungry\nI'm sleepy\n"
+      "I'm hungry\n",
+      "I'm not hungry\n",
+      "I'm sleepy\n"
      ]
     }
    ],
@@ -240,7 +281,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n2\n3\n"
+      "1\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
@@ -299,26 +342,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "file_extension": ".py",
+  "kernelspec": {
+   "display_name": "Python 3.8.8 ('base')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
-   }
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
-  "orig_nbformat": 2.0,
-  "file_extension": ".py",
   "mimetype": "text/x-python",
   "name": "python",
   "npconvert_exporter": "python",
+  "orig_nbformat": 2,
   "pygments_lexer": "ipython3",
-  "version": 3.0
+  "version": 3,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
