--- a/DataType/DataType.ipynb
+++ b/DataType/DataType.ipynb
@@ -342,13 +342,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"测试提交\")"
+   ]
   }
  ],
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -362,13 +364,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   },
   "mimetype": "text/x-python",
   "name": "python",
   "npconvert_exporter": "python",
-  "orig_nbformat": 2,
   "pygments_lexer": "ipython3",
+  "toc-autonumbering": true,
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false,
   "version": 3,
   "vscode": {
    "interpreter": {
@@ -377,5 +381,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
